Support prefixed path
You can test support using

  ROOT_URL="http://localhost:3000/flow/" meteor

We also add the `arillo:flow-router-helpers` dependency which makes
this simple example a little bit more complex but is required in order
to correctly generate prefixed paths in the views.

--- a/client/app.html
+++ b/client/app.html
@@ -9,13 +9,13 @@
 <template name="blogHome">
   <p>This is the home page of our blog</p>
   <p>
-    <a href="/hello-world">See Hello World Post</a>
+    <a href="{{pathFor 'post' postId='hello-world'}}">See Hello World Post</a>
   </p>
 </template>
 
 <template name="blogPost">
   <p>
-    <a href="/">Back</a> <br/>
+    <a href="{{pathFor 'home'}}">Back</a> <br/>
     This is a single blog post
   </p>
 </template>
